crates/runtime/tests/snapshots/simple__add.snap
---
source: crates/vm/tests/simple.rs
expression: snapshot
---
# Input:
2 + 2

# Result (success):
4

# Stdout:

