crates/runtime/tests/snapshots/simple__cmp_le.snap
---
source: crates/vm/tests/simple.rs
expression: snapshot
---
# Input:
2 <= 2

# Result (success):
true

# Stdout:

