crates/runtime/tests/snapshots/simple__div.snap
---
source: crates/vm/tests/simple.rs
expression: snapshot
---
# Input:
2 / 2

# Result (success):
1

# Stdout:

