crates/runtime/tests/snapshots/simple__minus_n.snap
---
source: crates/vm/tests/simple.rs
expression: snapshot
---
# Input:
-2

# Result (success):
-2

# Stdout:

