crates/runtime/tests/snapshots/simple__not_false.snap
---
source: crates/vm/tests/simple.rs
expression: snapshot
---
# Input:
!false

# Result (success):
true

# Stdout:

