crates/runtime/tests/snapshots/simple__not_true.snap
---
source: crates/vm/tests/simple.rs
expression: snapshot
---
# Input:
!true

# Result (success):
false

# Stdout:

