crates/runtime/tests/snapshots/simple__opt_none.snap
---
source: crates/vm/tests/simple.rs
expression: snapshot
---
# Input:
none ?? 2

# Result (success):
2

# Stdout:

