crates/runtime/tests/snapshots/simple__sub.snap
---
source: crates/vm/tests/simple.rs
expression: snapshot
---
# Input:
2 - 2

# Result (success):
0

# Stdout:

